# ChangeLog for dev-util/netbeans
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070608171640.ebuild:
  netbeans-6.0: fixed requirements for 'experimental' use flag

  09 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  +files/6.0/visualweb-JxpsSerializer.java-xerces-2.8.1.patch,
  netbeans-6.0_alpha10_pre20070608171640.ebuild:
  netbeans-6.0: several fixes and improvements

  08 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.0_alpha10_pre20070519031150.ebuild,
  -netbeans-6.0_alpha10_pre20070528145408.ebuild,
  +netbeans-6.0_alpha10_pre20070608171640.ebuild:
  Version bump

  03 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070519031150.ebuild, +files/5.5.1,
  +files/5.5.1/jdbcstorage-build.xml-comments.patch,
  +files/5.5.1/jspparser-build.xml.patch, +netbeans-5.5.1.ebuild,
  +files/5.5.1/mdrant-build.xml-comments.patch, +files/5.5.1/startscript.sh,
  +netbeans-6.0_alpha10_pre20070528145408.ebuild:
  Added bump for version 5.5.1 with extra packs from binaries

  26 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070519031150.ebuild:
  Now also 'harness' cluster is being built using unbundled stuff. Building of
  other clusters should fail atm afaik.

  26 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070519031150.ebuild:
  Unbundled jars for netbeans platform build (except jsr223-api.jar)

  19 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.0_alpha10_pre20070511.ebuild,
  +netbeans-6.0_alpha10_pre20070519031150.ebuild:
  Version bump

  12 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070511.ebuild:
  Some fixes in src_install

  12 May 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070511.ebuild:
  Fixed ant target path

  12 May 2007; Miroslav Šulc <fordfrog@gentoo.org>