@@ -76,6 +76,6 @@ DIST netbeans-xml-6.0-m10_pre20070608171640.tar.bz2 7637340 RMD160 bb4faa7d3ea80
 DIST netbeans-xtest-6.0-m10_pre20070608171640.tar.bz2 4709728 RMD160 4b6d275e30010b40a9aab7fa626cdd8f5347c20a SHA1 592abc5ab7b9aa4d957485c3c675b84f1ecff461 SHA256 a750bd207aab87e8b7e0e90a2a69aca6a9960f49f06b9b2e16ad64964cd2bc11
 DIST netbeans_mobility-5_5_1-linux.bin 52745216 RMD160 2058ac6701b47f378ead48851329420360169980 SHA1 844fc236667b5a3df57c6c1b195d246a900a6029 SHA256 a47e9ef5f2fdce60d2c6b65ad1e76be8b70257b89ae60dae1bdc33965e814f27
 EBUILD netbeans-5.5.1.ebuild 15257 RMD160 a6690d8fc51713e540d264b3c7de7dc6c1b8fa26 SHA1 ac9ceb18f01639ccf02e2a71d32f1749723ee54a SHA256 7ae84f3ad1d82ebd5d351cd806bb3c4abb8f185e9c21bf6618783ee0efad5158
-EBUILD netbeans-6.0_alpha10_pre20070608171640.ebuild 25668 RMD160 202b40c821e70fe665c8a78dbb5bfc63e09f4f6a SHA1 02ddfe455d5660d579535c19cb19ec4f9fa324e8 SHA256 f8dbc6173ecfb93dc4011bbdb08d97ceab3ba0f2a1e8981ca4e8050cb0733a5a
-MISC ChangeLog 15015 RMD160 0ed652a771457b5fcf22c71a37b28bdb3a2716d8 SHA1 35e63e4932b0de519471e79e71ac933147c2756f SHA256 f59073e450e4c0791e7ded941edc846edd0aec9aec35d5811be21e9ebb338e4b
+EBUILD netbeans-6.0_alpha10_pre20070608171640.ebuild 25937 RMD160 a314b7afc6049006dc4af56ee14ecf9bc51c3a03 SHA1 cc404e8f331011192c7f3bea7c680e727703a3d3 SHA256 13f4af66a77f66128db16a18696380ea83831d08b889b7c43875297e9d1f5f95
+MISC ChangeLog 15238 RMD160 649e505ceebc9505ba82e0269c56bb56a6aa1a26 SHA1 b094ed2d92aef6adc14b73f0de89cc51963e4d79 SHA256 6b352fc39c60046d91f218fa462e39822b9ea3bbd0c02e902a03ed37490d0734
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
