@@ -4,6 +4,11 @@
 
   09 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
   netbeans-6.0_alpha10_pre20070608171640.ebuild:
+  Added workaround for missing org-netbeans-libs-glassfish_logging.jar, still
+  there are some problems at startup of nb
+
+  09 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
+  netbeans-6.0_alpha10_pre20070608171640.ebuild:
   netbeans-6.0: fixed requirements for 'experimental' use flag
 
   09 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
